# cmake_minimum_required(VERSION <specify CMake version here>)
project(DataStructure)

set(CMAKE_CXX_STANDARD 17)

add_executable(DataStructure main.cpp TuringGraph.cpp)
add_executable(1203 1203.cpp)
add_executable(4205 4205.cpp)
add_executable(1359 1359.cpp)
add_executable(1004 1004.cpp)
add_executable(4147 4147.cpp)
add_executable(1577 1577.cpp)
add_executable(1003 1003.cpp)
add_executable(1991 1991.cpp)
add_executable(4203 4203.cpp)
add_executable(2109 2109.cpp)
add_executable(4062 4062.cpp)
add_executable(1360 1360.cpp)
add_executable(1596 1596.cpp)
add_executable(1593 1593.cpp)
add_executable(1550 1550.cpp)
add_executable(3044 3044.cpp)
add_executable(4183 4183.cpp)
add_executable(4158 4158.cpp)
add_executable(4204 4204.cpp)
add_executable(4202 4202.cpp)
add_executable(1002 1002.cpp)
add_executable(1005 1005.cpp)
add_executable(3106 3106.cpp)
add_executable(4009 4009.cpp)
add_executable(1594 1594.cpp)
add_executable(3030 3030.cpp)
add_executable(4025 4025.cpp)
add_executable(1992 1992.cpp)
add_executable(4053 4053.cpp)
add_executable(4045 4045.cpp)
add_executable(1034 1034.cpp)
add_executable(4054 4054.cpp)
add_executable(4116 4116.cpp)
add_executable(4 4.cpp)
add_executable(1206 1206.cpp)
add_executable(1599_2 1599_2.cpp)
add_executable(1320 1320.cpp)
add_executable(4211 4211.cpp)
add_executable(1599 1599.cpp)