# cmake_minimum_required(VERSION 3.15)
project(DataStructure)

set(CMAKE_CXX_STANDARD 17)

add_executable(1203 src/1203.cpp)
add_executable(4205 src/4205.cpp)
add_executable(1359 src/1359.cpp)
add_executable(1004 src/1004.cpp)
add_executable(4147 src/4147.cpp)
add_executable(1577 src/1577.cpp)
add_executable(1003 src/1003.cpp)
add_executable(1991 src/1991.cpp)
add_executable(4203 src/4203.cpp)
add_executable(2109 src/2109.cpp)
add_executable(4062 src/4062.cpp)
add_executable(1360 src/1360.cpp)
add_executable(1596 src/1596.cpp)
add_executable(1593 src/1593.cpp)
add_executable(1550 src/1550.cpp)
add_executable(3044 src/3044.cpp)
add_executable(4183 src/4183.cpp)
add_executable(4158 src/4158.cpp)
add_executable(4204 src/4204.cpp)
add_executable(4202 src/4202.cpp)
add_executable(1002 src/1002.cpp)
add_executable(1005 src/1005.cpp)
add_executable(3106 src/3106.cpp)
add_executable(4009 src/4009.cpp)
add_executable(1594 src/1594.cpp)
add_executable(3030 src/3030.cpp)
add_executable(4025 src/4025.cpp)
add_executable(1992 src/1992.cpp)
add_executable(4053 src/4053.cpp)
add_executable(4045 src/4045.cpp)
add_executable(1034 src/1034.cpp)
add_executable(4054 src/4054.cpp)
add_executable(4116 src/4116.cpp)
add_executable(1206 src/1206.cpp)
add_executable(1599_2 src/1599_2.cpp)
add_executable(1320 src/1320.cpp)
add_executable(4211 src/4211.cpp)
add_executable(1599 src/1599.cpp)
add_executable(4206 src/4206.cpp)
add_executable(1074 src/1074.cpp)
add_executable(1211 src/1211.cpp)
add_executable(1214 src/1214.cpp)
add_executable(4149 src/4149.cpp)
add_executable(4221 src/4221.cpp)
add_executable(1215 src/1215.cpp)
add_executable(1216 src/1216.cpp)
add_executable(1221 src/1221.cpp)
add_executable(4228 src/4228.cpp)
add_executable(4229 src/4229.cpp)
add_executable(4230 src/4230.cpp)
add_executable(4012 src/4012.cpp)
add_executable(1358 src/1358.cpp)
add_executable(1226 src/1226.cpp)
add_executable(1225 src/1225.cpp)
add_executable(1634 src/1634.cpp)
add_executable(1258 src/1258.cpp)
add_executable(4003 src/4003.cpp)
add_executable(4074 src/4074.cpp)
add_executable(1564 src/1564.cpp)
add_executable(1281 src/1281.cpp)
add_executable(1606 src/1606.cpp)
add_executable(1088 src/1088.cpp)
add_executable(1565 src/1565.cpp)
add_executable(4071 src/4071.cpp)
add_executable(1566 src/1566.cpp)
add_executable(1629 src/1629.cpp)
add_executable(1633 src/1633.cpp)
add_executable(1224 src/1224.cpp)
add_executable(4070 src/4070.cpp)
